tests/invalid/i13_unquoted_string.tsl
# INVALID TEST 13: Unquoted script name in RUN
# Expected error: syntax error — RUN requires a quoted STRING

TASK unquoted {
    RUN backup.sh
    EVERY DAY AT 02:00
}
